--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  color: red;
+}
+
+body {
+  font: 16px "Helvetica Neve", Arial, sans-serif;
+  color: #121214;
 }
